--- a/wbs/view/MainWindow.ui
+++ b/wbs/view/MainWindow.ui
@@ -298,8 +298,8 @@ border:1px solid #aaa;</string>
      <rect>
       <x>30</x>
       <y>200</y>
-      <width>72</width>
-      <height>15</height>
+      <width>91</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="font">
@@ -308,7 +308,7 @@ border:1px solid #aaa;</string>
      </font>
     </property>
     <property name="text">
-     <string>操作日志：</string>
+     <string>Error Log：</string>
     </property>
    </widget>
    <widget class="QWidget" name="widget_option" native="true">
@@ -923,7 +923,7 @@ border:1px solid #aaa;</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>150</x>
       <y>710</y>
       <width>72</width>
       <height>15</height>
@@ -941,7 +941,7 @@ border:1px solid #aaa;</string>
    <widget class="QLabel" name="label_task_queue_val">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>220</x>
       <y>706</y>
       <width>61</width>
       <height>25</height>
@@ -965,7 +965,7 @@ border:1px solid #aaa;</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>290</x>
       <y>710</y>
       <width>72</width>
       <height>15</height>
@@ -983,7 +983,7 @@ border:1px solid #aaa;</string>
    <widget class="QLabel" name="label_request_times_val">
     <property name="geometry">
      <rect>
-      <x>410</x>
+      <x>360</x>
       <y>706</y>
       <width>61</width>
       <height>25</height>
@@ -1007,7 +1007,7 @@ border:1px solid #aaa;</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>420</x>
       <y>710</y>
       <width>72</width>
       <height>15</height>
@@ -1025,7 +1025,7 @@ border:1px solid #aaa;</string>
    <widget class="QLabel" name="label_completed_val">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>490</x>
       <y>706</y>
       <width>61</width>
       <height>25</height>
@@ -1046,7 +1046,94 @@ border:1px solid #aaa;</string>
    <widget class="QLabel" name="label_task_number_val">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>100</x>
+      <y>706</y>
+      <width>61</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:0px;</string>
+    </property>
+    <property name="text">
+     <string>0</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_status">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>710</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>状态：</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_status_value">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>710</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color:#000</string>
+    </property>
+    <property name="text">
+     <string>准备</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_error_times">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>710</y>
+      <width>72</width>
+      <height>15</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>失败次数：</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_error_times_val">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
       <y>706</y>
       <width>61</width>
       <height>25</height>
